# paintify

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
docs/: index.html
docs/pkg/: package.json  paintify_web.d.ts  paintify_web.js  paintify_web_bg.wasm  paintify_web_bg.wasm.d.ts
frontend/: index.html
frontend/pkg/: paintify_web.d.ts  paintify_web_bg.wasm.d.ts
web/: Cargo.toml
web/src/: lib.rs
webcam/: Cargo.toml
webcam/src/: main.rs
