[package]
name = "paintify-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for paintify-core — drop images in a browser and paintify them"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paintify-core = { path = "../core" }
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

[features]
default = []
wee_alloc = ["dep:wee_alloc"]
