[package]
name = "paintify-webcam"
version = "0.1.0"
edition = "2021"
description = "Virtual webcam proxy — captures your camera and makes you look like MS Paint"

[dependencies]
paintify-core = { path = "../core" }
nokhwa = { version = "0.10", features = ["input-native"] }
pixels = "0.17"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
env_logger = "0.11"
